

<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0
                      http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>org.igsq.igsqbot</groupId>
    <artifactId>IGSQBot</artifactId>
    <version>1.0.0</version>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
        <maven.compiler.release>14</maven.compiler.release>
    </properties>

    <repositories>
        <repository>
            <id>jcenter</id>
            <name>jcenter</name>
            <url>https://jcenter.bintray.com/</url>
        </repository>
        
        <repository>
		    <id>jitpack.io</id>
		    <url>https://jitpack.io</url>
 		</repository>
    </repositories>

     <dependencies>
		<dependency>
		    <groupId>net.dv8tion</groupId>
		    <artifactId>JDA</artifactId>
		    <version>4.2.0_222</version>
		</dependency>
  		
  		<dependency>
  			<groupId>mysql</groupId>
  			<artifactId>mysql-connector-java</artifactId>
  			<version>8.0.22</version>
  		</dependency>
		
		<dependency>
		    <groupId>me.carleslc.Simple-YAML</groupId>
		    <artifactId>Simple-Yaml</artifactId>
		    <version>1.7.1</version>
		</dependency>

		<dependency>
		    <groupId>io.github.classgraph</groupId>
		    <artifactId>classgraph</artifactId>
		    <version>4.8.93</version>
		</dependency>
    </dependencies>

    <build>
        <sourceDirectory>src</sourceDirectory>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.8.1</version>
                <configuration>
                    <release>14</release>
                </configuration>
            </plugin>
            <plugin>
                <artifactId>maven-shade-plugin</artifactId>
                <version>3.2.4</version>
                <configuration>
                    <transformers>
                        <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
                            <mainClass>org.igsq.igsqbot.IGSQBot</mainClass>
                        </transformer>
                    </transformers>
                    <createDependencyReducedPom>false</createDependencyReducedPom>
                </configuration>
                <executions>
                    <execution>
                        <phase>package</phase>
                            <goals>
                                <goal>shade</goal>
                            </goals>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>
</project>

